# codecraft

./: .dockerignore  Dockerfile  build.sh  docker-compose.yaml  pyproject.toml  tags
api/: constants.py  main.py
api/routers/: healthcare.py  mask_pdf.py
api/services/: __init__.py  healthcare_service.py  mask_pdf.py
api/utils/: rate_limiter.py
core/agents/: document_assistant.py  mask_pdf.py
core/models/: client.py  ollama.py  ollama_client.py  openai_client.py
core/utilis/: error_handling.py  logger.py
core/utils/: chunkers.py  embeddings.py  env.py
core/utils/extractors/: pdf_extractor.py
core/utils/vectorstores/: weaviate.py
