[project]
name = "codecraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "langchain>=0.3.18",
    "langchain-ollama>=0.2.3",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.1",
    "reportlab>=4.3.1",
    "uvicorn>=0.34.0",
]
